--- a/refs.bib
+++ b/refs.bib
@@ -39,7 +39,7 @@
 }
 
 @online{acc-hackage,
- author = {Chakravarty, Manuel M T},
+ author = {Chakravarty, Manuel M.T.},
  title = {Accelerate package documentation},
  url = {http://hackage.haskell.org/packages/archive/accelerate/0.12.1.0/doc/html/Data-Array-Accelerate.html}
 }
@@ -50,4 +50,12 @@
  month = {November},
  year = {1996},
  url = {http://homepage.ntlworld.com/greenery/workStuff/Papers/introCogDims/index.html}
+}
+
+@book{cole1989,
+  title={Algorithmic skeletons: structured management of parallel computation},
+  author={Cole, Murray I.},
+  year=1989,
+  publisher={Pitman London},
+  url = {http://homepages.inf.ed.ac.uk/mic/Pubs/skeletonbook.pdf}
 }
