Dom's changes to the prep section

--- a/refs.bib
+++ b/refs.bib
@@ -59,3 +59,9 @@
   publisher={Pitman London},
   url = {http://homepages.inf.ed.ac.uk/mic/Pubs/skeletonbook.pdf}
 }
+
+@misc{cuda,
+  title={Programming guide},
+  author={Nvidia, CUDA},
+  year={2008}
+}
