Implemented all dominics changes

--- a/refs.bib
+++ b/refs.bib
@@ -3,7 +3,7 @@
  title = {Ypnos: declarative, parallel structured grid programming},
  booktitle = {Proceedings of the 5th ACM SIGPLAN workshop on Declarative aspects of multicore programming},
  year = {2010},
- url = {http://www.cl.cam.ac.uk/~dao29/publ/ypnos-damp10.pdf}
+ doi = {10.1145/1708046.1708053},
 } 
 
 @inproceedings{ypnos-dsl11,
@@ -11,7 +11,7 @@
  title = {Efficient and Correct Stencil Computation via Pattern Matching and Static Typing},
  booktitle = {Proceedings IFIP Working Conference on Domain-Specific Languages},
  year = {2011},
- url = {http://arxiv.org/pdf/1109.0777v1.pdf}
+ doi={10.1145/1708046.1708053}
 }
 
 @inproceedings{acc-damp11,
@@ -19,8 +19,7 @@
  title = {Accelerating Haskell array codes with multicore GPUs},
  booktitle = {Proceedings of the sixth workshop on Declarative aspects of multicore programming},
  year = {2011},
- url = {http://www.cse.unsw.edu.au/~chak/papers/acc-cuda.pdf},
- keywords = {arrays, data parallelism, dynamic compilation, gpgpu, haskell, skeletons}
+ doi = {10.1145/1926354.1926358},
 } 
 
 @article{cockburn08,
@@ -44,14 +43,6 @@
  url = {http://hackage.haskell.org/packages/archive/accelerate/0.12.1.0/doc/html/Data-Array-Accelerate.html}
 }
 
-@online{green96,
- author = {Green, T.R.G.},
- title = {An Introduction to the Cognitive Dimensions Framework},
- month = {November},
- year = {1996},
- url = {http://homepage.ntlworld.com/greenery/workStuff/Papers/introCogDims/index.html}
-}
-
 @book{cole1989,
   title={Algorithmic skeletons: structured management of parallel computation},
   author={Cole, Murray I.},
@@ -60,8 +51,73 @@
   url = {http://homepages.inf.ed.ac.uk/mic/Pubs/skeletonbook.pdf}
 }
 
-@misc{cuda,
-  title={Programming guide},
-  author={Nvidia, CUDA},
-  year={2008}
+@article{cuda, 
+  author={Lindholm, E. and Nickolls, J. and Oberman, S. and Montrym, J.}, 
+  journal={Micro, IEEE}, 
+  title={NVIDIA Tesla: A Unified Graphics and Computing Architecture}, 
+  year={2008}, 
+  doi={10.1109/MM.2008.31}, 
+}
+
+@manual{criterion,
+  title={Criterion},
+  author={Bryan O'Sullivan},
+  url={http://hackage.haskell.org/packages/archive/criterion/0.6.2.1/doc/html/Criterion.html}
+}
+
+@article{efron1981,
+  title={Nonparametric estimates of standard error: The jackknife, the bootstrap and other methods},
+  author={Efron, Bradley},
+  journal={Biometrika},
+  volume={68},
+  number={3},
+  pages={589--599},
+  year={1981},
+  publisher={Biometrika Trust},
+  doi={10.1214/aos/1176344552}
+}
+
+@incollection{jones2000,
+year={2000},
+booktitle={Programming Languages and Systems},
+doi={10.1007/3-540-46425-5_15},
+title={Type Classes with Functional Dependencies},
+publisher={Springer Berlin Heidelberg},
+author={Jones, Mark P.},
+}
+
+@inproceedings{mainland2007,
+ author = {Mainland, Geoffrey},
+ title = {Why it's nice to be quoted: quasiquoting for haskell},
+ booktitle = {Proceedings of the ACM SIGPLAN workshop on Haskell workshop},
+ year = {2007},
+ doi = {10.1145/1291201.1291211},
+} 
+
+@article{claessen2011,
+ author = {Claessen, Koen and Hughes, John},
+ title = {QuickCheck: a lightweight tool for random testing of Haskell programs},
+ journal = {SIGPLAN Not.},
+ issue_date = {April 2011},
+ volume = {46},
+ number = {4},
+ month = may,
+ year = {2011},
+ doi = {10.1145/1988042.1988046},
+} 
+
+@article{green96,
+  title={Usability Analysis of Visual Programming Environments: A 'Cognitive Dimensions' Framework},
+  author={Green, Thomas R. G. and Petre, Marian},
+  journal={Journal of visual languages and computing},
+  year={1996},
+  doi={10.1006/jvlc.1996.0009}
+}
+
+@article{uustalu2008,
+title = "Comonadic Notions of Computation ",
+journal = "Electronic Notes in Theoretical Computer Science ",
+year = "2008",
+doi = "10.1016/j.entcs.2008.05.029",
+author = "Tarmo Uustalu and Varmo Vene",
 }
