--- a/refs.bib
+++ b/refs.bib
@@ -85,7 +85,22 @@ title={Type Classes with Functional Dependencies},
 publisher={Springer Berlin Heidelberg},
 author={Jones, Mark P.},
 }
-
+author = {Chakravarty, Manuel M. T. and Keller, Gabriele and Jones, Simon Peyton},
+ title = {Associated type synonyms},
+ booktitle = {Proceedings of the tenth ACM SIGPLAN international conference on Functional programming},
+ series = {ICFP '05},
+ year = {2005},
+ isbn = {1-59593-064-7},
+ location = {Tallinn, Estonia},
+ pages = {241--253},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/1086365.1086397},
+ doi = {10.1145/1086365.1086397},
+ acmid = {1086397},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {associated types, generic programming, type classes, type functions, type inference},
+} 
 @inproceedings{mainland2007,
  author = {Mainland, Geoffrey},
  title = {Why it's nice to be quoted: quasiquoting for haskell},
@@ -121,3 +136,12 @@ year = "2008",
 doi = "10.1016/j.entcs.2008.05.029",
 author = "Tarmo Uustalu and Varmo Vene",
 }
+
+@inproceedings{chakravarty05,
+ author = {Chakravarty, Manuel M. T. and Keller, Gabriele and Jones, Simon Peyton},
+ title = {Associated type synonyms},
+ booktitle = {Proceedings of the tenth ACM SIGPLAN international conference on Functional programming},
+ series = {ICFP '05},
+ year = {2005},
+ doi = {10.1145/1086365.1086397},
+} 
